Set landscape orientation prop
Set sys.orientation.landscape to 1 when in landscape and to 0 when
in portrait orientation for devices that have rotating capacitive
buttons.

Change-Id: I5cf86834d3e09ead515e9de31391904d5aff3107
Signed-off-by: Evan McClain <aeroevan@gmail.com>

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2093,4 +2093,8 @@
     <string-array name="config_auto_perf_activities" translatable="false">
     </string-array>
 
+    <!-- Whether to set a system prop (sys.orientation.landscape)
+         when rotating for devices that have rotating buttons -->
+    <bool name="config_setLandscapeProp">false</bool>
+
 </resources>
