--- a/packages/SystemUI/res/values/ev_strings.xml
+++ b/packages/SystemUI/res/values/ev_strings.xml
@@ -31,4 +31,10 @@
     <string name="quick_settings_powershare_off_powersave_label">Wireless PowerShare off\nBattery saver</string>
     <string name="quick_settings_powershare_off_low_battery_label">Wireless PowerShare off\nBattery too low</string>
     <string name="quick_settings_powershare_enabled_label">Wireless PowerShare is enabled</string>
+
+    <!-- Reading mode QS tile -->
+    <string name="quick_settings_reading_mode">Reading mode</string>
+    <string name="quick_settings_reading_mode_on">Reading mode on.</string>
+    <string name="quick_settings_reading_mode_off">Reading mode off.</string>
+
 </resources>
