--- a/packages/SystemUI/res/values/ev_config.xml
+++ b/packages/SystemUI/res/values/ev_config.xml
@@ -18,4 +18,9 @@
     <!-- Whether usage of the proximity sensor during doze is supported -->
     <bool name="doze_proximity_sensor_supported">true</bool>
 
+    <!-- Max visible notification icons -->
+    <integer name="config_maxVisibleNotificationIcons">4</integer>
+    <integer name="config_maxVisibleNotificationIconsOnAod">3</integer>
+    <integer name="config_maxVisibleNotificationIconsOnLock">3</integer>
+
 </resources>
