SystemUI: doze: add config for double tap sensors that need a proximity check
Change-Id: Id7df987f0e9db4e5e2328534764ded397b6ac48d

--- a/packages/SystemUI/res/values/ev_config.xml
+++ b/packages/SystemUI/res/values/ev_config.xml
@@ -1,5 +1,5 @@
 <!--
-     Copyright (C) 2018-2019 The LineageOS Project
+     Copyright (C) 2018-2022 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -22,5 +22,8 @@
     <integer name="config_maxVisibleNotificationIcons">4</integer>
     <integer name="config_maxVisibleNotificationIconsOnAod">3</integer>
     <integer name="config_maxVisibleNotificationIconsOnLock">3</integer>
+
+    <!-- Doze: does the double tap sensor need a proximity check? -->
+    <bool name="doze_double_tap_proximity_check">false</bool>
 
 </resources>
