--- a/packages/SystemUI/res/values/ev_config.xml
+++ b/packages/SystemUI/res/values/ev_config.xml
@@ -44,4 +44,7 @@
 
     <!-- Color of the UDFPS pressed view -->
     <color name="config_udfpsColor">#ffffffff</color>
+
+    <!-- Control whether status bar should distinguish wifi standard inside the icon on devices. -->
+    <bool name="config_wifi_standard_distinguishable">true</bool>
 </resources>
